# Astaire

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.alpine  README.md  astaire-deployment.yaml
docker/: Dockerfile  bootstrap.sh
src/: CMakeLists.txt  config.h.in  main.cpp
src/address/: address.cpp  address.h  addressresolver.cpp  addressresolver.h
src/connection/: boostudpconnectionmanager.cpp  boostudpconnectionmanager.h  connectionmanager.cpp  connectionmanager.h  linuxsocketudpconnectionmanager.cpp  linuxsocketudpconnectionmanager.h  rawsocketudpconnectionmanager.cpp  rawsocketudpconnectionmanager.h  tcpconnectionmanager.cpp  tcpconnectionmanager.h  udpconnectionmanager.cpp  udpconnectionmanager.h
src/connection/handler/: abshandler.cpp  abshandler.h  asynctaskexecutor.cpp  asynctaskexecutor.h  binding_handler.cpp  binding_handler.h  handler.cpp  handler.h  handlercreator.cpp  handlercreator.h  helloworldhandler.cpp  helloworldhandler.h  javahandler.cpp  javahandler.h  printerhandler.cpp  printerhandler.h
src/utils/: ThreadPool.cpp  ThreadPool.h  jsonutils.cpp  jsonutils.h  log.cpp  log.h  maprefresher.h  stringutils.cpp  stringutils.h  threadpool.h
src/utils/parser/: metadata.cpp  metadata.h  metadataparser.cpp  metadataparser.h
src/utils/sfcheader/: sfcfixedlengthheader.cpp  sfcfixedlengthheader.h  sfcheaderstruct.h  sfcutilities.cpp  sfcutilities.h
